# TennisClipper

./: .gitignore  README.md  pyproject.toml  requirements.txt
datasets/: README.md  sessions_metadata.csv  sessions_registry.json
datasets/benchmarks/: 7125_7126.json  7252.json  7255.json  7515.json  7521.json  7559.json
datasets/eval/: court_player_gate.json  court_player_gate.pkl  efficientnet_b2_expanded_action_classifier.json  efficientnet_b2_test_eval.json  efficientnet_b2_test_report.json  efficientnet_b2_train_eval.json  efficientnet_b2_train_report.json  efficientnet_b2_val_eval.json  efficientnet_b2_val_report.json  rally_bigru.json  rally_bigru.pt  rally_lgbm.json  rally_lgbm.pkl  rally_lgbm.txt  rally_segment_eval.json  rally_segment_eval_7559train_7252test_t06.json  rally_segment_eval_7559train_7252test_tuned.json  rally_segment_eval_baseline_cnn_7252test.json  rally_segment_eval_cnn.json  (+10 more)
docs/: ANNOTATION_GUIDE.md  ARCHITECTURE.md  DATA_PRIVACY.md  ML_PIPELINE.md  ROADMAP.md
examples/: README.md
schemas/: features.schema.json  filter.schema.json  timeline.schema.json
scripts/: annotate_helper.py  eval_baseline.py  extract_benchmark.py  extract_benchmark_fcpxml.py
sessions/: README.md
tenniscut/: __init__.py  cli.py  config.py
tests/: __init__.py  test_annotate_server.py  test_ball_dampener_filter.py  test_ball_refine.py  test_ball_track_static.py  test_benchmark_labels.py  test_build_action_eval_manifest.py  test_build_vlm_eval_manifest.py  test_court_and_point_gap.py  test_court_calibration.py  test_detection_validity.py  test_fcpxml_benchmark.py  test_frame_io.py  test_fuse_rally_events.py  test_ml_corpus.py  test_ml_export.py  test_ml_labels.py  test_ml_manifest_io.py  test_rally_decoder.py  test_rally_lifecycle.py  test_segmentation_rules.py  test_timeline_schema.py
(+131 files in other folders)
